[package]
name = "rust-calendar"
version = "0.1.0"
edition = "2021"
description = "A calendar command-line tool written in rust"
readme = "README.md"
authors = ["Mogmoug <mogmoug123@outlook.com>"]
repository = "https://github.com/mogmoug/rust-calendar"
license = "MIT"
keywords = ["mogmoug", "calendar", "cil", "tool"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.23"