[package]
name = "rust-calendar"
version = "0.1.2"
edition = "2021"
description = "A calendar command-line tool written in rust"
readme = "README.md"
authors = ["Mogmoug <mogmoug123@outlook.com>"]
repository = "https://github.com/mogmoug/rust-calendar"
license = "MIT"
keywords = ["mogmoug", "calendar", "cli", "tool","time"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.23"
clap = { version = "4.0.32", features = ["derive"] }
